api/v1/istio-manifests/1.4/authz/allow-data-consumers-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-data-consumers
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - GET
        paths: 
        - /v1/products
        - /v1/resources/configuration
        - /v1/resources/projects
    - operation:
        methods:
        - GET
        - POST
        paths: 
        - /v1/accounts:activate
    when:
    - key: request.auth.claims[aud]
      values:
      - $OAUTH_CLIENT_ID
