api/v1/istio-manifests/1.4/authz/allow-knative-serving-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-knative-serving
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - GET
        paths:
        - /healthz
        - /metrics
        - /probe
        - /_internal/knative/*
