api/v1/istio-manifests/1.4/authz/allow-marketplace-service-account-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-marketplace-service-account
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - POST
        paths:
        # BEGIN: Backwards compatibility for marketplace
        - /v1/projects/$PROJECT_ID/accounts:register
        - /v1/projects/$PROJECT_ID/procurements:myProducts
        # END: Backwards compatibility for marketplace
        - /v1/accounts:register
        - /v1/procurements:myProducts
    - operation:
        methods:
        - GET
        paths:
        # BEGIN: Backwards compatibility for marketplace
        - /v1/projects/$PROJECT_ID/procurements:myProducts?*
        # END: Backwards compatibility for marketplace
        - /v1/procurements:myProducts?*
